--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,16 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
+  flutter_localizations:
+    sdk: flutter
+  intl: any
+
+  flutter_bloc: 9.1.1
+  get_it: 8.2.0
+  go_router: 16.3.0
+
+  # In-House Packages
+
   build_config:
     path: packages/build_config
 
