--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   build_config:
     path: packages/build_config
 
+  forecast_current_location:
+    path: features/forecast_current_location
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
